AN/react-base-ui2/examples/Gallery/Error/consts/TestType.js
export const SUCCESS = 'SUCCESS';
export const FAILURE_EXCEPTION = 'FAILURE_EXCEPTION';
export const FAILURE_HTTP = 'FAILURE_HTTP';
export const FAILURE_SERVICE = 'FAILURE_SERVICE';
export const FAILURE_APP = 'FAILURE_APP';
